--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
 name = "tame-sentry"
+description = "Unopinionated crash collection for Sentry reporting purposes"
+repository = "https://github.com/EmbarkStudios/tame-sentry"
 version = "0.1.0"
-authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
+authors = ["Embark <opensource@embark-studios.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+documentation = "https://docs.rs/tame-sentry"
+homepage = "https://github.com/EmbarkStudios/tame-sentry"
+keywords = ["breakpad", "sentry"]
+exclude = [
+    ".github",
+    "release.toml",
+    "breakpad-handler",
+    "breakpad-sys",
+]
 
 [dependencies]
 breakpad-handler = { version = "0.1.0", path = "./breakpad-handler" }
