--- a/breakpad-handler/Cargo.toml
+++ b/breakpad-handler/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "breakpad-handler"
+description = "Allows writing of a minidump when a crash occurs"
+repository = "https://github.com/EmbarkStudios/tame-sentry"
 version = "0.1.0"
-authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
+authors = ["Embark <opensource@embark-studios.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/breakpad-handler"
+homepage = "https://github.com/EmbarkStudios/tame-sentry"
+keywords = ["breakpad"]
 
 [dependencies]
 breakpad-sys = { version = "0.1.0", path = "../breakpad-sys" }
