--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ exclude = [
 breakpad-handler = { version = "0.1.0", path = "./breakpad-handler" }
 crossbeam = "0.8.0"
 parking_lot = "0.11"
-sentry-core = "0.21"
+sentry-core = { version = "0.21", features = ["client"] }
+serde_json = "1.0"
 
 [workspace]
 members = [
@@ -30,4 +31,4 @@ members = [
 ]
 
 [patch.crates-io]
-sentry-types = { path = "../sentry-rust/sentry-types" }
+sentry-core = { path = "../sentry-rust/sentry-core" }
